<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.Registrationp3"
    android:orientation="vertical"
    android:background="@drawable/back1"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_size">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="match_parent"
                android:text="@string/Marital_status"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/regmartialstatus"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white"



                >

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/havingkids"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/having_kids"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/kids"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white">



            </Spinner>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/kidslessthan3layout"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/no_of_kids"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:id="@+id/kidscount">

            </Spinner>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/kidsmorethan3layout"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/specify_kids_count"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:textColor="@android:color/white"
                android:id="@+id/kidsmorethan3">

            </androidx.appcompat.widget.AppCompatEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/mother_tongue"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/mothertounge"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white">

            </Spinner>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/nationality"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/nationalities"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white">

            </Spinner>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/where_doy_you_live"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/wheredoyoulive"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/stateholder"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/states"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/stae"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/citielayout"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/city"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/city"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white"></Spinner>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/residency_status"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/residencystatus"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white"
                >

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/where_do_you_grew_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/wheredoyougrewup"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/mobile_number"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:id="@+id/phonecode"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white">
            </Spinner>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:backgroundTint="#ffffff"
                android:textColor="@android:color/white"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/languages_you_speak"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"/>
            <com.thomashaertel.widget.MultiSpinner
                android:id="@+id/languagesspoken"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:popupBackground="@android:color/white"
                android:backgroundTint="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/login_edit_text_margin">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>