<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.Registrationp1"
    android:orientation="vertical"
    android:background="@drawable/back1"
    android:layoutDirection="rtl">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:layout_margin="@dimen/login_edit_text_margin"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Profile_For"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"
                    android:textColor="@android:color/white"/>



                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/Myself"
                    android:id="@+id/regprofilefor"
                    android:popupBackground="@android:color/white"
                    android:backgroundTint="@android:color/white"



                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loginuseremail"
                    android:textSize="@dimen/text_size"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"/>



                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:inputType="text"
                    android:id="@+id/reguseremail"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:backgroundTint="#ffffff"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"/>



                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/regusername"
                    android:maxLines="1"
                    android:textColorHint="@android:color/white"
                    android:backgroundTint="#ffffff"
                    android:textColor="@android:color/white"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loginpassword"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/reguserpassword"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:backgroundTint="#ffffff"
                    android:textColor="@android:color/white"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Confirm_Password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:inputType="textPassword"
                    android:backgroundTint="#ffffff"
                    android:maxLines="1"
                    android:id="@+id/reguserconfirmpassword"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Gender"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"
                    android:textColor="@android:color/white"
                    />


                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/regusergender"
                    android:backgroundTint="@android:color/white"
                    />


            </LinearLayout>


        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/login_edit_text_margin">


        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_termsofuse"
            android:buttonTint="@android:color/white"
            android:layout_marginStart="@dimen/login_edit_text_margin"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/termsofusetext"
            android:textColor="@android:color/white"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/login_edit_text_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/regpagelogintext"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/forgotpassword"
            android:id="@+id/regpageforgotpassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginBottom="@dimen/card_margin">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/regpagelogintext"
            android:layout_margin="@dimen/card_margin"
            android:id="@+id/regnextpage">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_gravity="center"

                />
        </androidx.cardview.widget.CardView>
</LinearLayout>




</LinearLayout>