<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/splashscreenback">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logosmall" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/login_edit_text_margin"
     >


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/login_edit_text_margin"
            android:backgroundTint="#ffffff"
            android:id="@+id/userloginemail_ET"
            android:hint="@string/loginuseremail"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/login_edit_text_margin"
            android:backgroundTint="#ffffff"
            android:id="@+id/userloginpwd_ET"
            android:hint="@string/loginpassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/login_edit_text_margin"
            android:id="@+id/login_bt"
            app:cardElevation="@dimen/card_shadow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:textColor=" #2e96d3"
                android:textSize="20dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>